compiler/lume_parser/src/snapshots/lume_parser__tests__construction_snapshots@empty_self.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"Self { };\")"
---
SOURCE_FILE@0..9
  EXPR_STMT@0..9
    CONSTRUCT_EXPR@0..8
      PATH@0..5
        PATH_TYPE@0..5
          NAME@0..4
            IDENT@0..4 "Self"
          WHITESPACE@4..5 " "
      LEFT_BRACE@5..6 "{"
      WHITESPACE@6..7 " "
      RIGHT_BRACE@7..8 "}"
    SEMICOLON@8..9 ";"
