compiler/lume_parser/src/snapshots/lume_parser__tests__construction_snapshots@fields.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"Foo { bar: 0, baz: 1 };\")"
---
SOURCE_FILE@0..23
  EXPR_STMT@0..23
    CONSTRUCT_EXPR@0..22
      PATH@0..4
        PATH_TYPE@0..4
          NAME@0..3
            IDENT@0..3 "Foo"
          WHITESPACE@3..4 " "
      LEFT_BRACE@4..5 "{"
      WHITESPACE@5..6 " "
      CONSTRUCTOR_FIELD@6..12
        NAME@6..9
          IDENT@6..9 "bar"
        COLON@9..10 ":"
        WHITESPACE@10..11 " "
        LIT_EXPR@11..12
          INTEGER_LIT@11..12
            INTEGER_LIT@11..12 "0"
      COMMA@12..13 ","
      WHITESPACE@13..14 " "
      CONSTRUCTOR_FIELD@14..20
        NAME@14..17
          IDENT@14..17 "baz"
        COLON@17..18 ":"
        WHITESPACE@18..19 " "
        LIT_EXPR@19..20
          INTEGER_LIT@19..20
            INTEGER_LIT@19..20 "1"
      WHITESPACE@20..21 " "
      RIGHT_BRACE@21..22 "}"
    SEMICOLON@22..23 ";"
