compiler/lume_parser/src/snapshots/lume_parser__tests__construction_snapshots@pathed.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"std::Foo<T> {  };\")"
---
SOURCE_FILE@0..17
  EXPR_STMT@0..17
    CONSTRUCT_EXPR@0..16
      PATH@0..12
        PATH_NAMESPACE@0..3
          NAME@0..3
            IDENT@0..3 "std"
        PATH_SEP@3..5 "::"
        PATH_TYPE@5..11
          NAME@5..8
            IDENT@5..8 "Foo"
          GENERIC_ARGS@8..11
            LESS@8..9 "<"
            NAMED_TYPE@9..10
              PATH@9..10
                PATH_TYPE@9..10
                  NAME@9..10
                    IDENT@9..10 "T"
            GREATER@10..11 ">"
        WHITESPACE@11..12 " "
      LEFT_BRACE@12..13 "{"
      WHITESPACE@13..15 "  "
      RIGHT_BRACE@15..16 "}"
    SEMICOLON@16..17 ";"
