compiler/lume_parser/src/snapshots/lume_parser__tests__doc_comments_snapshots@field.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item,\n\"struct Foo {\n            /// This is a doc comment\n            pub bar: Int32 = 0;\n        }\")"
---
SOURCE_FILE@0..92
  STRUCT@0..92
    STRUCT_KW@0..6 "struct"
    WHITESPACE@6..7 " "
    NAME@7..10
      IDENT@7..10 "Foo"
    WHITESPACE@10..11 " "
    LEFT_BRACE@11..12 "{"
    WHITESPACE@12..25 "\n            "
    FIELD@25..82
      DOC_COMMENT@25..50 "/// This is a doc com ..."
      WHITESPACE@50..63 "\n            "
      VISIBILITY@63..67
        PUB_KW@63..66 "pub"
        WHITESPACE@66..67 " "
      NAME@67..70
        IDENT@67..70 "bar"
      COLON@70..71 ":"
      WHITESPACE@71..72 " "
      NAMED_TYPE@72..78
        PATH@72..78
          PATH_TYPE@72..78
            NAME@72..77
              IDENT@72..77 "Int32"
            WHITESPACE@77..78 " "
      ASSIGN@78..79 "="
      WHITESPACE@79..80 " "
      LIT_EXPR@80..81
        INTEGER_LIT@80..81
          INTEGER_LIT@80..81 "0"
      SEMICOLON@81..82 ";"
    WHITESPACE@82..91 "\n        "
    RIGHT_BRACE@91..92 "}"
