compiler/lume_parser/src/snapshots/lume_parser__tests__enum_snapshots@empty.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"enum Foo {}\")"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                visibility: Private(
                    Private {
                        location: Location(
                            0..4,
                        ),
                    },
                ),
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        5..8,
                    ),
                },
                cases: [],
                location: Location(
                    0..11,
                ),
                documentation: None,
            },
        ),
    ),
]
