compiler/lume_parser/src/snapshots/lume_parser__tests__enum_snapshots@extra_comma.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_err(\"enum Foo { Bar, Baz, }\")"
---
ExpectedIdentifier {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "enum Foo { Bar, Baz, }",
        package: PackageId(
            0,
        ),
    },
    range: 21..22,
    actual: },
}
