compiler/lume_parser/src/snapshots/lume_parser__tests__enum_snapshots@multiple_variants.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"enum Foo { Bar, Baz }\")"
---
SOURCE_FILE@0..21
  ENUM@0..21
    ENUM_KW@0..4 "enum"
    WHITESPACE@4..5 " "
    NAME@5..8
      IDENT@5..8 "Foo"
    WHITESPACE@8..9 " "
    LEFT_BRACE@9..10 "{"
    WHITESPACE@10..11 " "
    CASE@11..14
      NAME@11..14
        IDENT@11..14 "Bar"
    COMMA@14..15 ","
    WHITESPACE@15..16 " "
    CASE@16..19
      NAME@16..19
        IDENT@16..19 "Baz"
    WHITESPACE@19..20 " "
    RIGHT_BRACE@20..21 "}"
