compiler/lume_parser/src/snapshots/lume_parser__tests__final_expr_snapshots@arithmetic.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = { 4 + 7 };\")"
---
SOURCE_FILE@0..18
  LET_STMT@0..18
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    SCOPE_EXPR@8..17
      BLOCK@8..17
        LEFT_BRACE@8..9 "{"
        WHITESPACE@9..10 " "
        FINAL_STMT@10..16
          BIN_EXPR@10..15
            LIT_EXPR@10..11
              INTEGER_LIT@10..11
                INTEGER_LIT@10..11 "4"
            WHITESPACE@11..12 " "
            ADD@12..13 "+"
            WHITESPACE@13..14 " "
            LIT_EXPR@14..15
              INTEGER_LIT@14..15
                INTEGER_LIT@14..15 "7"
          WHITESPACE@15..16 " "
        RIGHT_BRACE@16..17 "}"
    SEMICOLON@17..18 ";"
