compiler/lume_parser/src/snapshots/lume_parser__tests__final_expr_snapshots@varref.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = { a };\")"
---
SOURCE_FILE@0..14
  LET_STMT@0..14
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    SCOPE_EXPR@8..13
      BLOCK@8..13
        LEFT_BRACE@8..9 "{"
        WHITESPACE@9..10 " "
        FINAL_STMT@10..12
          VARIABLE_EXPR@10..11
            NAME@10..11
              IDENT@10..11 "a"
          WHITESPACE@11..12 " "
        RIGHT_BRACE@12..13 "}"
    SEMICOLON@13..14 ";"
